# paperforge

./: CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
packaging/aur/: .SRCINFO  PKGBUILD
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: FileDropZone.jsx  HomePage.jsx  PdfViewer.jsx  ThemeToggle.jsx  ToolSidebar.jsx  TopBar.jsx
src/lib/: tauri.js
src/tools/: AddTextTool.jsx  CompareTool.jsx  CompressTool.jsx  ExtractTextTool.jsx  ImagesToPdfTool.jsx  MergeTool.jsx  MetadataTool.jsx  PageNumbersTool.jsx  PdfToImagesTool.jsx  ProtectTool.jsx  ReorderTool.jsx  RotateTool.jsx  SignTool.jsx  SplitTool.jsx  UnlockTool.jsx  WatermarkTool.jsx
