[package]
name = "paperforge"
version = "0.1.0"
description = "Asyncat's Local-First PDF Toolkit"
authors = ["Asyncat"]
edition = "2021"

[lib]
name = "paperforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.34"
printpdf = "0.7"
image = "0.25"
